<resources>
    <string name="app_name" translatable="false">Smart Alert</string>
    <string name="login_email_hint" translatable="false">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_confirm_hint">Confirm Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <string name="already_account">Already \nhave an \naccount?</string>
    <string name="already_account_flat">Already have an account?</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="new_user">New User? Register now</string>
    <string name="register_title">Create a \nnew account</string>

    <string name="report_incident">Report an incident</string>
    <string name="welcome_message">Welcome back!</string>
    <string name="report_message">New Report</string>


    <string name="weird">Noticed anything weird?\nLet us know!</string>
    <string name="dont_worry">Don\'t worry!\nWe\'ll take on from here!</string>
    <string name="upload_image">Upload Image (Optional)</string>
    <string name="report_btn">Report Incident</string>

    <string name="title_reports">Current Reports</string>
    <string name="no_reports">No. of reports</string>
    <string name="report_time">Time of report</string>
    <string name="report_location">Location</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="statistics">Reports History</string>
    <string name="details">Details</string>
    <string name="active_reports_header">Active Reports</string>
    <string name="previous_reports_header">Reports History</string>



</resources>
