<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/english_language"
            style="@style/viewParent.headerText.NoMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EN"
            android:textColor="@color/blue"
            android:textSize="13sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.015"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.203" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="9dp"
            android:layout_height="15dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/greek_language"
            app:layout_constraintEnd_toStartOf="@+id/greek_language"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/english_language"
            app:layout_constraintTop_toTopOf="@+id/english_language"
            app:srcCompat="@drawable/divider_blue" />

        <TextView
            android:id="@+id/greek_language"
            style="@style/viewParent.headerText.NoMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EL"
            android:textColor="@color/blue"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/blue"
                    android:layout_marginEnd="4dp"
                    android:text="@string/already_account" />


                <ImageView
                    android:layout_width="194dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/ic_login_hero" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_box"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/email"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_box"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/password"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/newsMoreTextSize" />

            <Button
                android:id="@+id/login_btn"
                style="@style/loginButton"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="@string/login_button"

                />

            <TextView
                android:id="@+id/register_btn"
                style="@style/parent"
                android:layout_marginTop="10dp"
                android:text="@string/new_user"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="17dp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

    <View
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg"/>
    <ImageView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="11dp"
        android:src="@drawable/ic_add_img"/>




</RelativeLayout>